[gd_scene load_steps=4 format=3 uid="uid://m677tc47lho1"]

[ext_resource type="Theme" uid="uid://djik2vt5o72kb" path="res://Themes/default_theme.tres" id="1_h5w1l"]
[ext_resource type="Script" path="res://Scripts/UI/main_menu.gd" id="2_cxq2c"]
[ext_resource type="PackedScene" uid="uid://cfxc8wlc0l4aj" path="res://Scenes/UI/option_menu.tscn" id="3_gp3xl"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_h5w1l")
script = ExtResource("2_cxq2c")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 640.0
color = Color(0.721569, 0.435294, 0.313726, 1)

[node name="MainMenuContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainMenuContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 120
text = "Ear Training"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnVBox" type="VBoxContainer" parent="MainMenuContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Train" type="Button" parent="MainMenuContainer/VBoxContainer/BtnVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Quit")
text = "Train"
icon_alignment = 1

[node name="Options" type="Button" parent="MainMenuContainer/VBoxContainer/BtnVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Train")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Train")
text = "Options"

[node name="Quit" type="Button" parent="MainMenuContainer/VBoxContainer/BtnVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Train")
focus_next = NodePath("../Train")
focus_previous = NodePath("../Options")
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="MainMenuContainer"]
visible = false
layout_mode = 2

[node name="OptionMenu" parent="." instance=ExtResource("3_gp3xl")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MainMenuContainer/VBoxContainer/BtnVBox/Train" to="." method="_on_train_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/BtnVBox/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/BtnVBox/Quit" to="." method="_on_quit_pressed"]
